--- a/test/framework/testdata/certmanager/certmanager_selfsignedissuer.yaml
+++ b/test/framework/testdata/certmanager/certmanager_selfsignedissuer.yaml
@@ -2,6 +2,6 @@ apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: selfsigned-issuer
-  namespace: cert-manager
+  namespace: eksa-packages
 spec:
   selfSigned: {}
