--- a/test/framework/testdata/certmanager/certmanager_letsencrypt_issuer.yaml
+++ b/test/framework/testdata/certmanager/certmanager_letsencrypt_issuer.yaml
@@ -2,7 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: letsencrypt
-  namespace: cert-manager
+  namespace: eksa-packages
 spec:
   acme:
     privateKeySecretRef:
@@ -11,7 +11,7 @@ spec:
     solvers:
       - dns01:
           route53:
-            region: us-west-2
+            region: "{{.route53Region}}"
             hostedZoneID: "{{.route53ZoneId}}"
             accessKeyID: "{{.route53AccessKeyId}}"
             secretAccessKeySecretRef:
