--- a/test/framework/testdata/certmanager/certmanager_secret.yaml
+++ b/test/framework/testdata/certmanager/certmanager_secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: route53-credentials-secret
+  namespace: eksa-packages
 type: Opaque
 stringData:
   secret-access-key: "{{.route53SecretAccessKey}}"
