--- a/pkg/providers/vsphere/testdata/expected_results_ubuntu_ntp_config_cp.yaml
+++ b/pkg/providers/vsphere/testdata/expected_results_ubuntu_ntp_config_cp.yaml
@@ -352,8 +352,8 @@ spec:
     ntp:
       enabled: true
       servers: 
-      - time-a.eks-a.aws
-      - time-b.eks-a.aws
+      - time-a-cp.eks-a.aws
+      - time-b-cp.eks-a.aws
       - 192.168.0.10
     preKubeadmCommands:
     - hostname "{{ ds.meta_data.hostname }}"
@@ -432,8 +432,8 @@ spec:
     ntp:
       enabled: true
       servers: 
-      - time-a.eks-a.aws
-      - time-b.eks-a.aws
+      - time-a-etcd.eks-a.aws
+      - time-b-etcd.eks-a.aws
       - 192.168.0.10
     cloudInitConfig:
       version: 3.4.16
