--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -185,6 +185,8 @@ rules:
   - awssnowclusters
   - awssnowippools
   - awssnowmachinetemplates
+  - cloudstackclusters
+  - cloudstackmachinetemplates
   - dockerclusters
   - dockermachinetemplates
   - tinkerbellclusters
