Rufio machines validations FLC (#4908)
* Rufio machine read permissions

* Adding rufio machine to schema

* Adding rufio machine contactable checks

* Fixing linter and permissions

* Checking rufio machines for worker node reconcile

* Adding unit test coverage for etcd.go

* renaming etcdreader to kubereader and other refactors

* Files renamed

* Renaming rufio machine validate method

* fixing catalogue insert for loop

* Resolving conflicts with new phase runner

--- a/config/manifest/eksa-components.yaml
+++ b/config/manifest/eksa-components.yaml
@@ -5774,6 +5774,15 @@ rules:
   - update
   - watch
 - apiGroups:
+  - bmc.tinkerbell.org
+  resources:
+  - machines
+  - machines/status
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
   - cluster.x-k8s.io
   resources:
   - '*'
