Add watches for CloudStack resources to controller (#5035)

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -194,6 +194,8 @@ rules:
   - awssnowclusters
   - awssnowippools
   - awssnowmachinetemplates
+  - cloudstackclusters
+  - cloudstackmachinetemplates
   - dockerclusters
   - dockermachinetemplates
   - tinkerbellclusters
