Remove use of dep api

--- a/conformance/Makefile
+++ b/conformance/Makefile
@@ -28,7 +28,7 @@ sonobuoy:
 
 .PHONY: sonobuoy-run
 sonobuoy-run:
-	./sonobuoy run --mode=certified-conformance --wait --kube-conformance-image k8s.gcr.io/conformance:$(K8S_VERSION)
+	./sonobuoy run --mode=certified-conformance --wait --kube-conformance-image registry.k8s.io/conformance:$(K8S_VERSION)
 
 .PHONY: sonobuoy-results
 sonobuoy-results:
