Added validation for HookImagesURLPath for proxy configuration tinkerbell

--- a/pkg/providers/tinkerbell/testdata/cluster_tinkerbell_proxy.yaml
+++ b/pkg/providers/tinkerbell/testdata/cluster_tinkerbell_proxy.yaml
@@ -51,6 +51,7 @@ metadata:
   namespace: test-namespace
 spec:
   tinkerbellIP: "2.3.4.5"
+  hookImagesURLPath: "https://anywhere.eks.amazonaws.com/"
   osImageURL: "https://ubuntu.gz"
 
 ---
