--- a/test/e2e/SKIPPED_TESTS.yaml
+++ b/test/e2e/SKIPPED_TESTS.yaml
@@ -1,9 +1,11 @@
 skipped_tests:
 # CloudStack
 - TestCloudStackKubernetes121RedhatProxyConfig
-- TestCloudStackKubernetes121RedhatRegistryMirrorAndCert
 - TestCloudStackKubernetes122ThreeWorkersConformanceFlow
 - TestCloudStackKubernetes123ThreeWorkersConformanceFlow
+# CloudStack Registry Mirror endpoint was not set up
+- TestCloudStackKubernetes121RedhatRegistryMirrorAndCert
+- TestCloudStackKubernetes121UbuntuAirgappedRegistryMirror
 # Unskip these after 1.22 and 1.23 CloudStack images are available in CI env
 - TestCloudStackKubernetes123GitopsOptionsFluxLegacy
 - TestCloudStackKubernetes123SimpleFlow
