--- a/config/crd/bases/anywhere.eks.amazonaws.com_nutanixdatacenterconfigs.yaml
+++ b/config/crd/bases/anywhere.eks.amazonaws.com_nutanixdatacenterconfigs.yaml
@@ -43,6 +43,16 @@ spec:
                   bundle for users that configured their Prism Central with certificates
                   from non-publicly trusted CAs
                 type: string
+              credentialRef:
+                description: CredentialRef is the reference to the secret name that
+                  contains the credentials for the Nutanix Prism Central. The namespace
+                  for the secret is assumed to be a constant i.e. eksa-system.
+                properties:
+                  kind:
+                    type: string
+                  name:
+                    type: string
+                type: object
               endpoint:
                 description: Endpoint is the Endpoint of Nutanix Prism Central
                 type: string
