Use separate secrets for CAPX & EKS-A
- EKS-A will use nutanix-credentials
- CAPX will continue to use credentials named after cluster name

--- a/pkg/providers/nutanix/config/secret-template.yaml
+++ b/pkg/providers/nutanix/config/secret-template.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: "{{.clusterName}}"
+  name: "{{.secretName}}"
   namespace: "{{.eksaSystemNamespace}}"
 data:
   credentials: "{{.base64EncodedCredentials}}"
