Use separate secrets for CAPX & EKS-A
- EKS-A will use nutanix-credentials
- CAPX will continue to use credentials named after cluster name

--- a/pkg/providers/nutanix/testdata/datacenterConfig_with_insecure.yaml
+++ b/pkg/providers/nutanix/testdata/datacenterConfig_with_insecure.yaml
@@ -6,4 +6,7 @@ metadata:
 spec:
   endpoint: "prism.nutanix.com"
   port: 9440
+  credentialRef:
+    kind: Secret
+    name: "nutanix-credentials"
   insecure: true
