--- a/config/manifest/eksa-components.yaml
+++ b/config/manifest/eksa-components.yaml
@@ -4400,6 +4400,16 @@ spec:
                   bundle for users that configured their Prism Central with certificates
                   from non-publicly trusted CAs
                 type: string
+              credentialRef:
+                description: CredentialRef is the reference to the secret name that
+                  contains the credentials for the Nutanix Prism Central. The namespace
+                  for the secret is assumed to be a constant i.e. eksa-system.
+                properties:
+                  kind:
+                    type: string
+                  name:
+                    type: string
+                type: object
               endpoint:
                 description: Endpoint is the Endpoint of Nutanix Prism Central
                 type: string
@@ -6388,6 +6398,27 @@ webhooks:
     service:
       name: eksa-webhook-service
       namespace: eksa-system
+      path: /mutate-anywhere-eks-amazonaws-com-v1alpha1-nutanixdatacenterconfig
+  failurePolicy: Fail
+  name: mutation.nutanixdatacenterconfig.anywhere.amazonaws.com
+  rules:
+  - apiGroups:
+    - anywhere.eks.amazonaws.com
+    apiVersions:
+    - v1alpha1
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - nutanixdatacenterconfigs
+  sideEffects: None
+- admissionReviewVersions:
+  - v1
+  - v1beta1
+  clientConfig:
+    service:
+      name: eksa-webhook-service
+      namespace: eksa-system
       path: /mutate-anywhere-eks-amazonaws-com-v1alpha1-snowmachineconfig
   failurePolicy: Fail
   name: mutation.snowmachineconfig.anywhere.amazonaws.com
@@ -6598,6 +6629,27 @@ webhooks:
     - UPDATE
     resources:
     - gitopsconfigs
+  sideEffects: None
+- admissionReviewVersions:
+  - v1
+  - v1beta1
+  clientConfig:
+    service:
+      name: eksa-webhook-service
+      namespace: eksa-system
+      path: /validate-anywhere-eks-amazonaws-com-v1alpha1-nutanixdatacenterconfig
+  failurePolicy: Fail
+  name: nutanixdatacenterconfig.kb.io
+  rules:
+  - apiGroups:
+    - anywhere.eks.amazonaws.com
+    apiVersions:
+    - v1alpha1
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - nutanixdatacenterconfigs
   sideEffects: None
 - admissionReviewVersions:
   - v1
