--- a/pkg/providers/nutanix/testdata/datacenterConfig_with_invalid_port.yaml
+++ b/pkg/providers/nutanix/testdata/datacenterConfig_with_invalid_port.yaml
@@ -6,3 +6,6 @@ metadata:
 spec:
   endpoint: "prism.nutanix.com"
   port: 99999
+  credentialRef:
+    kind: Secret
+    name: "nutanix-credentials"
