--- a/pkg/providers/nutanix/testdata/eksa-cluster-autoscaler.yaml
+++ b/pkg/providers/nutanix/testdata/eksa-cluster-autoscaler.yaml
@@ -48,6 +48,9 @@ metadata:
 spec:
   endpoint: "prism.nutanix.com"
   port: 9440
+  credentialRef:
+    kind: Secret
+    name: "nutanix-credentials"
 ---
 apiVersion: anywhere.eks.amazonaws.com/v1alpha1
 kind: NutanixMachineConfig
