--- a/pkg/providers/nutanix/testdata/eksa-cluster-invalid-pe-cluster-random-name.yaml
+++ b/pkg/providers/nutanix/testdata/eksa-cluster-invalid-pe-cluster-random-name.yaml
@@ -45,6 +45,9 @@ metadata:
 spec:
   endpoint: "prism.nutanix.com"
   port: 9440
+  credentialRef:
+    kind: Secret
+    name: "nutanix-credentials"
 ---
 apiVersion: anywhere.eks.amazonaws.com/v1alpha1
 kind: NutanixMachineConfig
