Full Cluster Lifecycle support for Nutanix provider
Adds Nutanix cluster reconciler for full cluster lifecycle support.

--- a/config/manifest/eksa-components.yaml
+++ b/config/manifest/eksa-components.yaml
@@ -4425,7 +4425,6 @@ spec:
                 type: boolean
               port:
                 description: Port is the Port of Nutanix Prism Central
-                minimum: 9440
                 type: integer
             required:
             - endpoint
@@ -6120,6 +6119,10 @@ rules:
   - dockerclusters/status
   - dockermachinetemplates
   - dockermachinetemplates/status
+  - nutanixclusters
+  - nutanixclusters/status
+  - nutanixmachinetemplates
+  - nutanixmachinetemplates/status
   verbs:
   - get
   - list
