--- a/config/rbac/manager_extraroles_patch.yaml
+++ b/config/rbac/manager_extraroles_patch.yaml
@@ -89,6 +89,10 @@
       - dockerclusters/status
       - dockermachinetemplates
       - dockermachinetemplates/status
+      - nutanixclusters
+      - nutanixclusters/status
+      - nutanixmachinetemplates
+      - nutanixmachinetemplates/status
     verbs:
       - get
       - list
