--- a/config/crd/bases/anywhere.eks.amazonaws.com_tinkerbellmachineconfigs.yaml
+++ b/config/crd/bases/anywhere.eks.amazonaws.com_tinkerbellmachineconfigs.yaml
@@ -48,19 +48,46 @@ spec:
                 description: HostOSConfiguration defines the configuration settings
                   on the host OS.
                 properties:
+                  bottlerocketConfiguration:
+                    description: BottlerocketConfiguration defines the Bottlerocket
+                      configuration on the host OS. These settings only take effect
+                      when the `osFamily` is bottlerocket.
+                    properties:
+                      kubernetes:
+                        description: Kubernetes defines the Kubernetes settings on
+                          the host OS.
+                        properties:
+                          allowedUnsafeSysctls:
+                            description: AllowedUnsafeSysctls defines the list of
+                              unsafe sysctls that can be set on a node.
+                            items:
+                              type: string
+                            type: array
+                          clusterDNSIPs:
+                            description: ClusterDNSIPs defines IP addresses of the
+                              DNS servers.
+                            items:
+                              type: string
+                            type: array
+                          maxPods:
+                            description: MaxPods defines the maximum number of pods
+                              that can run on a node.
+                            type: integer
+                        type: object
+                    type: object
                   ntpConfiguration:
                     description: NTPConfiguration defines the NTP configuration on
                       the host OS.
                     properties:
                       servers:
+                        description: Servers defines a list of NTP servers to be configured
+                          on the host OS.
                         items:
                           type: string
                         type: array
                     required:
                     - servers
                     type: object
-                required:
-                - ntpConfiguration
                 type: object
               osFamily:
                 type: string
