--- a/pkg/providers/tinkerbell/config/template-md.yaml
+++ b/pkg/providers/tinkerbell/config/template-md.yaml
@@ -94,6 +94,9 @@ spec:
 {{ .registryCACert | indent 12 }}
           {{- end }}
 {{- end }}
+{{- if .bottlerocketSettings }}
+{{ .bottlerocketSettings | indent 8 }}
+{{- end }}
         nodeRegistration:
 {{- if .workerNodeGroupTaints }}
           taints:
