Lint fixes, some more checks,  and add some more tests

--- a/pkg/providers/nutanix/config/cp-template.yaml
+++ b/pkg/providers/nutanix/config/cp-template.yaml
@@ -15,7 +15,7 @@ spec:
     port: {{.nutanixPort}}
     insecure: {{.nutanixInsecure}}
     credentialRef:
-      name: "{{.clusterName}}"
+      name: "{{.secretName}}"
       kind: Secret
   controlPlaneEndpoint:
     host: "{{.controlPlaneEndpointIp}}"
