--- a/pkg/providers/nutanix/testdata/expected_results_oidc.yaml
+++ b/pkg/providers/nutanix/testdata/expected_results_oidc.yaml
@@ -9,7 +9,7 @@ spec:
     port: 9440
     insecure: false
     credentialRef:
-      name: "eksa-unit-test"
+      name: "capx-eksa-unit-test"
       kind: Secret
   controlPlaneEndpoint:
     host: "test-ip"
