Add CredentialRef property to NutanixDatacenterConfig CRD (#5114)
* Add CredentialRef to NutanixDatacenterConfig

The design proposal for the new field can be found in the following
PR https://github.com/aws/eks-anywhere/pull/5092

* Use separate secrets for CAPX & EKS-A

- EKS-A will use nutanix-credentials
- CAPX will continue to use credentials named after cluster name

* Reorder go imports

* Add some more unit tests

* Fix lint failures

* Remove defaulting webhook for NutanixDatacenterConfig

And add some unit tests

* Remove nutanixdatacenterconfig mutation webhooks from config/manifests

* Update existing testdata with credentialRef

* Address review comments

* Ensure secret name from cluster gets used when specified

* Address review comments

* Add more webhook checks and checks on secret names

* Lint fixes, some more checks,  and add some more tests

--- a/pkg/providers/nutanix/testdata/datacenterConfig_empty_credentialRef_name.yaml
+++ b/pkg/providers/nutanix/testdata/datacenterConfig_empty_credentialRef_name.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: default
 spec:
   endpoint: "prism.nutanix.com"
-  port: 99999
+  port: 9440
   credentialRef:
     kind: Secret
-    name: "nutanix-credentials"
+    name: ""
