--- a/pkg/api/v1alpha1/testdata/nutanix/invalid-credentialref-kind.yaml
+++ b/pkg/api/v1alpha1/testdata/nutanix/invalid-credentialref-kind.yaml
@@ -2,10 +2,9 @@ apiVersion: anywhere.eks.amazonaws.com/v1alpha1
 kind: NutanixDatacenterConfig
 metadata:
   name: eksa-unit-test
-  namespace: default
 spec:
   endpoint: "prism.nutanix.com"
-  port: 99999
+  port: 9440
   credentialRef:
-    kind: Secret
-    name: "nutanix-credentials"
+    name: eksa-unit-test
+    kind: ConfigMap
