Move release config to embed directory to help build one off binaries

--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,4 @@ docs/.hugo_build.lock
 *-artifacts
 *.log
 pkg/executables/TestDeployTemplate*
-pkg/files/config
+pkg/files/config/bundle-release.yaml
