--- a/pkg/providers/nutanix/testdata/expected_results_registry_mirror.yaml
+++ b/pkg/providers/nutanix/testdata/expected_results_registry_mirror.yaml
@@ -59,9 +59,6 @@ spec:
           - localhost
           - 127.0.0.1
           - 0.0.0.0
-        extraArgs:
-          oidc-client-id: my-client-id
-          oidc-issuer-url: https://mydomain.com/issuer
       controllerManager:
         extraArgs:
           enable-hostpath-provisioner: "true"
@@ -135,6 +132,12 @@ spec:
         status: {}
       owner: root:root
       path: /etc/kubernetes/manifests/kube-vip.yaml
+    - content: |
+        [plugins."io.containerd.grpc.v1.cri".registry.mirrors]
+          [plugins."io.containerd.grpc.v1.cri".registry.mirrors."public.ecr.aws"]
+            endpoint = ["https://1.2.3.4:1234/v2/eks-anywhere"]
+      owner: root:root
+      path: "/etc/containerd/config_append.toml"
     initConfiguration:
       nodeRegistration:
         kubeletExtraArgs:
@@ -158,6 +161,9 @@ spec:
         sshAuthorizedKeys:
           - "mySshAuthorizedKey"
     preKubeadmCommands:
+      - cat /etc/containerd/config_append.toml >> /etc/containerd/config.toml
+      - sudo systemctl daemon-reload
+      - sudo systemctl restart containerd
       - hostnamectl set-hostname "{{ ds.meta_data.hostname }}"
       - echo "::1         ipv6-localhost ipv6-loopback" >/etc/hosts
       - echo "127.0.0.1   localhost" >>/etc/hosts
