--- a/config/manifest/eksa-components.yaml
+++ b/config/manifest/eksa-components.yaml
@@ -5088,6 +5088,47 @@ spec:
                     minItems: 1
                     type: array
                 type: object
+              nonRootVolumes:
+                description: NonRootVolumes provides the configuration options for
+                  the non root storage volumes.
+                items:
+                  description: 'Volume encapsulates the configuration options for
+                    the storage device TODO: Trim the fields that do not apply for
+                    Snow.'
+                  properties:
+                    deviceName:
+                      description: Device name
+                      type: string
+                    encrypted:
+                      description: Encrypted is whether the volume should be encrypted
+                        or not.
+                      type: boolean
+                    encryptionKey:
+                      description: EncryptionKey is the KMS key to use to encrypt
+                        the volume. Can be either a KMS key ID or ARN. If Encrypted
+                        is set and this is omitted, the default AWS key will be used.
+                        The key must already exist and be accessible by the controller.
+                      type: string
+                    iops:
+                      description: IOPS is the number of IOPS requested for the disk.
+                        Not applicable to all types.
+                      format: int64
+                      type: integer
+                    size:
+                      description: Size specifies size (in Gi) of the storage device.
+                        Must be greater than the image snapshot size or 8 (whichever
+                        is greater).
+                      format: int64
+                      minimum: 8
+                      type: integer
+                    type:
+                      description: Type is the type of the volume (e.g. gp2, io1,
+                        etc...).
+                      type: string
+                  required:
+                  - size
+                  type: object
+                type: array
               osFamily:
                 description: 'OSFamily is the node instance OS. Valid values: "bottlerocket"
                   and "ubuntu".'
