Update snow supported volume field

--- a/config/crd/bases/anywhere.eks.amazonaws.com_snowmachineconfigs.yaml
+++ b/config/crd/bases/anywhere.eks.amazonaws.com_snowmachineconfigs.yaml
@@ -46,21 +46,6 @@ spec:
                   deviceName:
                     description: Device name
                     type: string
-                  encrypted:
-                    description: Encrypted is whether the volume should be encrypted
-                      or not.
-                    type: boolean
-                  encryptionKey:
-                    description: EncryptionKey is the KMS key to use to encrypt the
-                      volume. Can be either a KMS key ID or ARN. If Encrypted is set
-                      and this is omitted, the default AWS key will be used. The key
-                      must already exist and be accessible by the controller.
-                    type: string
-                  iops:
-                    description: IOPS is the number of IOPS requested for the disk.
-                      Not applicable to all types.
-                    format: int64
-                    type: integer
                   size:
                     description: Size specifies size (in Gi) of the storage device.
                       Must be greater than the image snapshot size or 8 (whichever
@@ -69,7 +54,11 @@ spec:
                     minimum: 8
                     type: integer
                   type:
-                    description: Type is the type of the volume (e.g. gp2, io1, etc...).
+                    description: Type is the type of the volume (sbp1 for capacity-optimized
+                      HDD, sbg1 performance-optimized SSD, default is sbp1)
+                    enum:
+                    - sbp1
+                    - sbg1
                     type: string
                 required:
                 - size
@@ -141,21 +130,6 @@ spec:
                     deviceName:
                       description: Device name
                       type: string
-                    encrypted:
-                      description: Encrypted is whether the volume should be encrypted
-                        or not.
-                      type: boolean
-                    encryptionKey:
-                      description: EncryptionKey is the KMS key to use to encrypt
-                        the volume. Can be either a KMS key ID or ARN. If Encrypted
-                        is set and this is omitted, the default AWS key will be used.
-                        The key must already exist and be accessible by the controller.
-                      type: string
-                    iops:
-                      description: IOPS is the number of IOPS requested for the disk.
-                        Not applicable to all types.
-                      format: int64
-                      type: integer
                     size:
                       description: Size specifies size (in Gi) of the storage device.
                         Must be greater than the image snapshot size or 8 (whichever
@@ -164,8 +138,11 @@ spec:
                       minimum: 8
                       type: integer
                     type:
-                      description: Type is the type of the volume (e.g. gp2, io1,
-                        etc...).
+                      description: Type is the type of the volume (sbp1 for capacity-optimized
+                        HDD, sbg1 performance-optimized SSD, default is sbp1)
+                      enum:
+                      - sbp1
+                      - sbg1
                       type: string
                   required:
                   - size
