Nutanix Full Cluster lifecycle support (#5190)
* Full Cluster Lifecycle support for Nutanix provider

Adds Nutanix cluster reconciler for full cluster lifecycle support.

* Address review comments

* Bugfix on the validaiton conditional for VCPU

* Address review comments

--- a/config/manifest/eksa-components.yaml
+++ b/config/manifest/eksa-components.yaml
@@ -4425,7 +4425,6 @@ spec:
                 type: boolean
               port:
                 description: Port is the Port of Nutanix Prism Central
-                minimum: 9440
                 type: integer
             required:
             - endpoint
@@ -6097,6 +6096,10 @@ rules:
   - dockerclusters/status
   - dockermachinetemplates
   - dockermachinetemplates/status
+  - nutanixclusters
+  - nutanixclusters/status
+  - nutanixmachinetemplates
+  - nutanixmachinetemplates/status
   verbs:
   - get
   - list
@@ -6659,6 +6662,27 @@ webhooks:
     - UPDATE
     resources:
     - nutanixdatacenterconfigs
+  sideEffects: None
+- admissionReviewVersions:
+  - v1
+  - v1beta1
+  clientConfig:
+    service:
+      name: eksa-webhook-service
+      namespace: eksa-system
+      path: /validate-anywhere-eks-amazonaws-com-v1alpha1-nutanixmachineconfig
+  failurePolicy: Fail
+  name: validation.nutanixmachineconfig.anywhere.amazonaws.com
+  rules:
+  - apiGroups:
+    - anywhere.eks.amazonaws.com
+    apiVersions:
+    - v1alpha1
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - nutanixmachineconfigs
   sideEffects: None
 - admissionReviewVersions:
   - v1
