add boot settings for BR

--- a/config/manifest/eksa-components.yaml
+++ b/config/manifest/eksa-components.yaml
@@ -5061,6 +5061,16 @@ spec:
                       configuration on the host OS. These settings only take effect
                       when the `osFamily` is bottlerocket.
                     properties:
+                      boot:
+                        description: Boot defines the boot settings for bottlerocket.
+                        properties:
+                          bootKernelParameters:
+                            additionalProperties:
+                              items:
+                                type: string
+                              type: array
+                            type: object
+                        type: object
                       kernel:
                         description: Kernel defines the kernel settings for bottlerocket.
                         properties:
@@ -5355,6 +5365,16 @@ spec:
                       configuration on the host OS. These settings only take effect
                       when the `osFamily` is bottlerocket.
                     properties:
+                      boot:
+                        description: Boot defines the boot settings for bottlerocket.
+                        properties:
+                          bootKernelParameters:
+                            additionalProperties:
+                              items:
+                                type: string
+                              type: array
+                            type: object
+                        type: object
                       kernel:
                         description: Kernel defines the kernel settings for bottlerocket.
                         properties:
@@ -5731,6 +5751,16 @@ spec:
                       configuration on the host OS. These settings only take effect
                       when the `osFamily` is bottlerocket.
                     properties:
+                      boot:
+                        description: Boot defines the boot settings for bottlerocket.
+                        properties:
+                          bootKernelParameters:
+                            additionalProperties:
+                              items:
+                                type: string
+                              type: array
+                            type: object
+                        type: object
                       kernel:
                         description: Kernel defines the kernel settings for bottlerocket.
                         properties:
